[project]
name = "p-median-zebra"
version = "0.1.0"
description = "Solving the p-median problem with Zebra"
readme = "README.md"
authors = [
    { name = "paulafernalia", email = "xxxx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.10.0",
    "marimo>=0.12.8",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pydantic>=2.11.3",
    "scipy>=1.15.2",
]

[project.scripts]
p-median-zebra = "p_median_zebra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
